--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 django_project/blog/__pycache__/
 django_project/blog/migrations/
 django_project/django_project/__pycache__/
+django_project/users/__pycache__/
 
