--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ django_project/django_project/__pycache__/
 django_project/users/__pycache__/
 
 /django_project/users/__pycache__/
+/django_project/users/migrations
