--- a/django_project/requirements.txt
+++ b/django_project/requirements.txt
@@ -1,4 +1,17 @@
 asgiref==3.8.1
+crispy-bootstrap4==2024.1
 Django==5.0.3
+django-admin==2.0.2
+django-crispy-forms==2.1
+django-excel-response2==3.0.6
+django-six==1.0.5
+excel-base==1.0.4
+isoweek==1.3.3
+python-dateutil==2.9.0.post0
+screen==1.0.1
+six==1.16.0
 sqlparse==0.4.4
+TimeConvert==3.0.13
 tzdata==2024.1
+tzlocal==5.2
+xlwt==1.3.0
